Fixed link issues and overlapping in screen sizes

--- a/css/layout.css
+++ b/css/layout.css
@@ -55,7 +55,7 @@ grid-area: blog ;
 }
 
 .blog{
-    margin-bottom: 5em;
+    margin-bottom: 2em;
 }
 
 main a{
